--- a/index.html
+++ b/index.html
@@ -6,26 +6,28 @@
 <link href="style.css" type="text/css" rel="stylesheet">	
 </head>
 <body>
-<div id="main">
-	<h1> Fran Herr </h1>
-	<hr>
-	<div class="centering">
+<div id="header">
+Fran Herr
+<div class="right">
 	<a href="home.html" class="DirBtnBig">Home</a>
 	<a href="grapefruitGecko.html" class="DirBtnBig">GrapefruitGecko</a>
 	<a href="mathProjects.html" class="DirBtnBig">Math Projects</a>
 	<a href="mathematicians.html" class="DirBtnBig">List of Mathematicians</a>
-	</div>
-	<hr>
-	<p class="disp"> Math starts from the inside.<br>
-	It describes the world and appears in nature,<br>
-	but it starts from the inside.<br>
-	“What can the human mind do?”<br>
-	Math is an unknown landscape<br>
-	we explore the terrain.<br>
-	And every step deeper<br>
-	reveals more about ourselves<br>
-	Math reveals the way the human mind was created </p>
-	<div id="imageDis"> <img src="images/cover.jpg" alt="cover" height="300"> </div>
+</div>
+</div>
+<div id="main">
+	<h1> Fran Herr </h1>
+	<h2>Hello!</h2>
+	I am an aspiring mathematician with a proclivity towards the arts. 
+	I graduated in June 2022 from the University of Washington with a B.S. in math and a B.A. in dance. 
+	Currently I am a math PhD student at the University of Chicago.
+	My current math-y activities include:
+	<ul>
+		<li>My YouTube channel GrapefruitGecko where I make explanatory math videos</li>
+		<li>crocheting hyperbolic spaces and Seifert surfaces</li>
+		<li>thinking about patterns in Modular Multiplication Tables.</li>
+	</ul>
+	My full CV can be found here.
 </div>
 </body>
 </html>
