Final version of website
Simplified CSS. Added and subtracted pages.

--- a/index.html
+++ b/index.html
@@ -7,27 +7,56 @@
 </head>
 <body>
 <div id="header">
-Fran Herr
-<div class="right">
-	<a href="home.html" class="DirBtnBig">Home</a>
-	<a href="grapefruitGecko.html" class="DirBtnBig">GrapefruitGecko</a>
-	<a href="mathProjects.html" class="DirBtnBig">Math Projects</a>
-	<a href="mathematicians.html" class="DirBtnBig">List of Mathematicians</a>
+	<h1 id="name"> Fran Herr </h1>
+<div id="directory">
+	<div>
+		<a href="index.html" class="DirBtnBig selected">Home</a>
+		<a href="notes.html" class="DirBtnBig">Writing</a>
+		<a href="talks.html" class="DirBtnBig">Talks</a>
+		<a href="activities.html" class="DirBtnBig">Activities</a>
+		<!-- <a href="grapefruitgecko.html" class="DirBtnBig">YouTube</a> -->
+	</div>
+	<hr>
 </div>
 </div>
-<div id="main">
-	<h1> Fran Herr </h1>
-	<h2>Hello!</h2>
-	I am an aspiring mathematician with a proclivity towards the arts. 
-	I graduated in June 2022 from the University of Washington with a B.S. in math and a B.A. in dance. 
-	Currently I am a math PhD student at the University of Chicago.
-	My current math-y activities include:
-	<ul>
-		<li>My YouTube channel GrapefruitGecko where I make explanatory math videos</li>
-		<li>crocheting hyperbolic spaces and Seifert surfaces</li>
-		<li>thinking about patterns in Modular Multiplication Tables.</li>
-	</ul>
-	My full CV can be found here.
+<div id="content-box">
+	<div class="container">
+		<div>
+			<h2 class="centering">Welcome!</h2>
+			<p>
+				I am a graduate student studying mathematics at University of Chicago. My research sits at the intersection of
+			low-dimensional topology, geometry, and dynamics. 
+			</p>
+			<h3 class="centering">Math</h3>
+			<p>
+				I gravitate towards problems with hand-on examples, beautiful pictures,
+				and an interplay between different levels of structure. Some reoccuring objects are branched coverings of surfaces, 
+				link complements, symmetry groups, and hyperbolic spaces. 
+			</p>
+			<p>
+				Most recently, I have been thinking about depth one foliations
+				of 3-manifolds and associated mapping classes on infinite-type surfaces.
+			</p>
+			<h3 class="centering">Art</h3>
+			<p>
+				I love finding ways to communicate mathematics through the arts. I make dances, drawings, and videos
+			about math. This interest takes on many different forms. My recent/current projects include...
+			</p>
+			<ul>
+				<li><a href="https://www.youtube.com/watch?v=pSdeWTqz4yg">a dance film</a> about configuration spaces of points</li>
+				<li>making videos for my YouTube channel <a href="https://www.youtube.com/@GrapefruitGecko">GrapefruitGecko</a></li>
+				<li>crocheting hyperbolic spaces and Seifert surfaces</li>
+				<li>thinking about patterns in <a href="files/mmt-dancing-short.pdf">modular multiplication tables</a>.</li>
+			</ul>
+			My full CV can be found <a href="files/cv-2025.pdf">here</a>.
+		<h2>Contact me</h2> at herrf[at]uchicago[dot]edu
+		</div>
+		<div>
+			<div class="imgDis"><img class="responsive" src="images/profile.jpg" alt="a picture of Fran"></div>
+		<div class="imgDis"><img class="responsive" src="images/seifert-surfaces.jpg" alt="crocheted seifert surfaces"></div>
+		</div>
+	</div>
 </div>
 </body>
+<footer>Last updated June 2025; Made by Fran Herr</footer>
 </html>
